manifests/dashboards/argocd/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-external-dashboard
  labels:
    app.kubernetes.io/name: argocd-dashboard
    app.kubernetes.io/instance: argocd-dashboard
    app.kubernetes.io/managed-by: ArgoCD
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`argocd.lvh.me`)
      priority: 10
      services:
        - name: argocd-server
          port: 80
    - kind: Rule
      match: Host(`argocd.lvh.me`) && Headers(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - name: argocd-server
          port: 80
          scheme: h2c
